--- a/figures/monoid-category.tex
+++ b/figures/monoid-category.tex
@@ -4,7 +4,7 @@
 \begin{document}
 \begin{tikzcd}
 	\bullet
-	\arrow["1", from=1-1, to=1-1, loop, in=55, out=125, distance=10mm]
+	\arrow["+1", from=1-1, to=1-1, loop, in=55, out=125, distance=10mm]
 	\arrow["{id_{\bullet}=0}", from=1-1, to=1-1, loop, in=235, out=305, distance=10mm]
 \end{tikzcd}
 \end{document}
