--- a/problems.Rmd
+++ b/problems.Rmd
@@ -80,7 +80,7 @@ The essence of visualization is comparison [see e.g. @tufte2001; @tukey1993]. Th
 
 An interesting yet underappreciated fact is that, in many common visualizations, geometric objects within the same graphical layer represent disjoint subsets of the data. That is, in most plots, each point, bar, line, or polygon corresponds a unique set of data points (rows of the data), with no overlap with the other objects in that layer. While different layers can represent the same data (e.g., a smooth fit may be overlaid over scatterplot points, and point clouds may be plotted over boxplot boxes), between objects within the same layer, data is rarely shared. This practice, despite being so common to border on a rule, is surprisingly seldom discussed.
 
-There are, of course, counter-examples. For instance, certain visualizations of set-typed data "double up" the contribution of data subsets, such that the same subset of the data may appear in multiple objects [see e.g. @alsallakh2013; @alsallakh2014; @conway2017; @lex2014]. Similarly, two-dimensional kernel density plots are unusual in that each line or polygon represents an isopleth over a joint probability density of all data points^[But, interestingly, one-dimensional kernel density plots are again disjoint.]. However, these visualizations represent a fairly small fraction of all plot types. Typically, when we see a plot, we expect each geometric object to represent a distinct set of cases.  
+There are, of course, counter-examples. For instance, certain visualizations of set-typed data "double up" the contribution of data subsets, such that the same subset of the data may appear in multiple objects [see e.g. @alsallakh2013; @alsallakh2014; @conway2017; @lex2014]. Similarly, two-dimensional kernel density plots are unusual in that each line or polygon represents an isopleth over a joint probability density of all data points^[But, interestingly, one-dimensional kernel density polygons are once again disjoint.]. However, these visualizations represent a fairly small fraction of all plot types. Typically, when we see a plot, we expect each geometric object to represent a distinct set of cases.  
 
 This tendency to visualize disjoint objects may partly come from established norms, however, I contend that there is also a deeper reason: the nature of comparison itself. Specifically, my argument is that, in general, it is far easier to compare and reason about objects which are disjoint, rather than ones which are entangled. This makes disjointness a particularly nice, "natural" property. 
 
@@ -321,7 +321,7 @@ While set inclusion ($\subseteq$) is a perfectly valid way to describe the relat
 knitr::include_graphics("./figures/barplot-preorder2.png") 
 ```
 
-This definition is still fairly vague, however, it will be made more precise in Section \ref(preorders-categories). To summarize the key points, our data subset hierarchy can be described as a preorder, where the ordering is defined by a kind of set union operation. This is really the same idea as Figure \@ref(fig:spineplot-tree), we are simply being more explicit about our data assumptions. The real utility of this approach will be revealed later, in Section \@ref(aggregation). However, for now, it may be useful to revise our definition of a regular plot:
+This definition is still fairly vague, however, it will be made more precise in Section \@ref(preorders-categories). To summarize the key points, our data subset hierarchy can be described as a preorder, where the ordering is defined by a kind of set union operation. This is really the same idea as Figure \@ref(fig:spineplot-tree), we are simply being more explicit about our data assumptions. The real utility of this approach will be revealed later, in Section \@ref(aggregation). However, for now, it may be useful to revise our definition of a regular plot:
 
 :::{.definition name="Regular plot 2"}
 Regular plot is a plot where the geometric objects within one layer represent a preorder of data subsets ordered by set inclusion/union (such that there is a bijection between these objects and the data subsets, and the subsets on the same order level represent a partition of the data). 
@@ -785,7 +785,7 @@ A couple of points. First, based on what we have shown before, we could simplify
 
 Second, the properties of associativity and unitality need to hold for *all* possible inputs in the function's domain. Thus, if a function passes the `is_monoid` test for any three specific values, this is not sufficient for proving that it is monoidal. For instance, while it is the case that `mean(c(c(2, 4), 3)) == mean(c(mean(c(2, 4)), 3))`, this does not prove that `mean` is associative^[In fact, with a bit of high-school algebra, it can be shown that the average function will appear associative for any triplets $x, y, z$ where $3x + 3y + 6z = 4x + 4y + 4z$ holds.]. However, a single counter-example does definitely prove that a summary function is *not* monoid, as is the case, for example, with `mean`, `median`, and `sd` functions above. Thus, while not a fool-proof method, functions like `is_monoid` function can serve as a valuable sanity check.
 
-Finally, monoids also imply certain computational advantages. Specifically, because the operation of reducing a set of $n$ elements via a monoid translates into $n - 1$ binary operations, we know we can always compute the result in linear ($O(n)$) time (provided that the product $\otimes$ itself is constant). Additionally, due to associativity, monoids are easily parallelizable (embarassingly parallel), making them useful in distributed computing strategies such as MapReduce [@lin2013]. Finally, when the total product consists of repeated products of the same element (i.e. $a \otimes a \otimes a \otimes \ldots$), the result can be computed in sub-linear $O(\log n)$ time, by applying the squaring algorithm [also known as the russian peasant or egyptian algorithm, see @stepanov2009; @stepanov2014]^[This method can also be extended to situations where we take the the product of a commutative series with fixed increment, see Appendix \@ref(gauss-russian-monoids)].     
+Finally, monoids also imply certain computational advantages. Specifically, because the operation of reducing a set of $n$ elements via a monoid translates into $n - 1$ binary operations, we know we can always compute the result in linear ($O(n)$) time (provided that the product $\otimes$ itself is constant). Additionally, due to associativity, monoids are easily parallelizable (embarassingly parallel), making them useful in distributed computing strategies such as MapReduce [@lin2013]. Finally, when the total product consists of repeated products of the same element (i.e. $a \otimes a \otimes a \otimes \ldots$), the result can be computed in sub-linear $O(\log n)$ time, by applying the squaring algorithm [also known as the Russian peasant or Egyptian multiplication algorithm, see @stepanov2009; @stepanov2014].
 
 #### Groups and inverses {#groups-inverses}
 
@@ -829,7 +829,7 @@ This abstract distinction between groups and monoids, and the presence (absence)
 
 Thus, monoids and groups present two fundamentally different models for linked selection. If we care about using parts of a geometric object to compare some "special" highlighted subset $D_i$ against the subset representing the rest of the data $D_j \supseteq D_i$, then it is enough for the underlying summary statistic to form a monoid. However, if $D_i$ and $D_j$ are disjoint, $D_i \cap D_j = \varnothing$, and we care about comparing $D_i$ and $D_j$ directly, then we also need the inverse operator $\otimes^{-1}$ and the underlying summary needs to be a group.
 
-This distinction even has interesting implications for data interpretation. For instance, the reason why the maximum operator works well in Figure \ref(fig:barplot-maximums) is because we are comparing a "special subset" of the study participants ("smokers") against that of all participants ("smokers *and* non-smokers"). In other words, with the smoking status variable, it makes sense to compare one category against the union of both categories. This is not the case for all categorical variables, however. For instance, with a gender variable, it would rarely make sense to think of "men" as a special subset of "men and women", or vice versa; the vast majority of time, we are interested in comparing men and women directly, as disjoint subsets. Conversely, this is also the case why monoids work with single-group linked selection: the selected points really are a "special" subset, and the subset representing the "rest" of the data is only interesting in that it is part of "all" of the data points to compare against. However, with multiple selection groups, disjoint comparisons become essential.     
+This distinction even has interesting implications for data interpretation. For instance, the reason why the maximum operator works well in Figure \@ref(fig:grammar-barplot-maximums) is because we are comparing a "special subset" of the study participants ("smokers") against that of all participants ("smokers *and* non-smokers"). In other words, with the smoking status variable, it makes sense to compare one category against the union of both categories. This is not the case for all categorical variables, however. For instance, with a gender variable, it would rarely make sense to think of "men" as a special subset of "men and women", or vice versa; the vast majority of time, we are interested in comparing men and women directly, as disjoint subsets. Conversely, this is also the case why monoids work with single-group linked selection: the selected points really are a "special" subset, and the subset representing the "rest" of the data is only interesting in that it is part of "all" of the data points to compare against. However, with multiple selection groups, disjoint comparisons become essential.     
 
 #### Other properties: Monotonicity and commutativity {#monotonicity-commutativity}
 
@@ -1194,7 +1194,11 @@ In contrast, auxiliary graphical elements are typically few in number, and requi
 
 #### Rendering: A functor from summary statistics to graphics {#rendering-functor}
 
-Importantly, just as we can think of aggregation as a functor from the category of data subsets to the category of summary statistics (see Section \@ref(aggregation-functor)), so can we interpret rendering as a functor from the category of summary statistics to the category of graphics. Specifically, if the statistics underlying the plot form a hierarchy, so should the geometric objects representing them, and the mapping from one to the other should preserve the inherent structure. 
+Importantly, just as we can think of aggregation as a functor from the category of data subsets to the category of summary statistics (see Section \@ref(aggregation-functor)), so can we interpret rendering as a functor from the category of summary statistics to the category of graphics or geometric objects (geoms). Specifically, if the statistics underlying the plot form a hierarchy, then so should the geometric objects representing them, and the mapping from one to the other should preserve the inherent structure. 
 
-Practically, this means that the geoms we use to represent the data should also behave like monoids: they should have a notion of an empty element and a binary associative operations that combines two elements together. For most simple geometric shapes, this is easily satisfied. For instance, bars, or more generally rectangles, can be combined by stacking or layering. Note that this does not necessarily require summing the bar heights. For instance, we can combine two bars by "cutting off" the extra height of the taller bar and pasting the resulting segment on top of the shorter bar (and the operation will be unital and associative, provided that the bars are sorted in increasing order by height).
+Formally, supposing that $F: \mathcal{D} \to \mathcal{S}$ is a functor from the category of data subsets to the category of summary statistics, then we can also define a functor $H: \mathcal{S} \to \mathcal{G}$ from the category of summary statistics to the category of geoms. By virtue of functor composition (see Section \@ref(functors)), this automatically creates a new functor $F \thena H$, which corresponds to a mapping from the category of data subsets to the category of geoms. All together, this defines the following structure-preserving mappings:
+
+$$\mathcal{D} \to \mathcal{S} \to \mathcal{G}$$
+
+In more practical terms, this suggests that the geoms representing our data should have a structure which is compatible with that of the summary statistics. If the summary statistics are monoids, then the geoms should be too: they need an "empty" geom and a binary associative operation for merging two geoms into one. For most simple geometric objects, these properties are trivially satisfied. For example, rectangles and circular regions can be combined through stacking or layering, and line segments can be concatenated end-to-end. Importantly, this combination operation does not always necessarily have to involve "summing" underlying values. For instance, when combining two barplot bars, we can "cut off" the excess height of the taller bar and append the resulting segment to the shorter one, or equivalently, draw the shorter bar on top of the taller. When applied to bars sorted by height, this operation is unital and associative, yet does not result in summing the underlying values (see also Section \@ref(groups-inverses)).
 
