--- a/references.bib
+++ b/references.bib
@@ -768,6 +768,15 @@
   publisher	= {Hobart press}
 }
 
+@misc{matplotlib2025,
+	title = {{Plot types}},
+	author = {{The Matplotlib development team}},
+	year = {2025},
+	month = feb,
+	note = {[Online; accessed 11. Apr. 2025]},
+	url = {https://matplotlib.org/stable/plot_types/index.html}
+}
+
 @Article{	  codd1970,
   title		= {A relational model of data for large shared data banks},
   author	= {Codd, Edgar F},
@@ -3460,6 +3469,14 @@
   year		= {2019},
   publisher	= {Springer}
 }
+
+@book{cormen2022,
+  title={Introduction to algorithms},
+  author={Cormen, Thomas H and Leiserson, Charles E and Rivest, Ronald L and Stein, Clifford},
+  year={2022},
+  publisher={MIT press}
+}
+
 
 @Misc{		  tableau2023,
   title		= {{Tableau: Business Intelligence and Analytics Software}},
